# record_baxter_eef_trajectory

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  tips
feedback/: feedback_file.csv
include/record_baxter_eef_trajectory/: lib_recording.hpp
launch/: convert_quaterion.launch  get_real_model_state.launch  get_real_robot_services.launch  record_baxter_eef_trajectory.launch  record_baxter_eef_trajectory.launch~  record_object_and_baxter_eef_trajectory.launch
src/: convert_quaterion_angles_to_matrix.cpp  parameters.hpp  record_baxter_eef_trajectory.cpp  record_object_and_eef_position.cpp
src/lib/: lib_recording.cpp
src/services/: get_real_eef_pose_service.cpp  get_real_model_state_service.cpp  object_position_service.cpp  record_left_eef_trajectory_service.cpp
srv/: Getrealmodelstate.srv
