<?xml version="1.0"?>
<package>
  <name>record_baxter_eef_trajectory</name>
  <version>0.0.0</version>
  <description>The record_baxter_eef_trajectory package</description>

  <maintainer email="ghanim@todo.todo">ghanim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
